--- a/NiconicoUI/Onds.Niconico.UI.WinRT.Test/MainPage.xaml
+++ b/NiconicoUI/Onds.Niconico.UI.WinRT.Test/MainPage.xaml
@@ -11,7 +11,6 @@
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
             <RowDefinition/>
-            <RowDefinition/>
         </Grid.RowDefinitions>
         <RichTextBlock x:Name="RichTextBlock" FontSize="50">
             <Paragraph>
@@ -19,13 +18,10 @@
                     text
                 </Run>
                
-                <nc:NiconicoWebTextSpan x:Name="NiconicoWebText" >
-                    test
-                    tec
-                </nc:NiconicoWebTextSpan>
+                <nc:NiconicoWebTextSpan x:Name="NiconicoWebText" />
             </Paragraph>
         </RichTextBlock>
         
-        <Button Grid.Row="1" FontSize="160" Content="Change" Click="Button_Click"/>
+        <!-- <Button Grid.Row="1" FontSize="160" Content="Change" Click="Button_Click"/>-->
     </Grid>
 </Page>
