--- a/NiconicoUI/Onds.Niconico.UI.WinRT.Test/MainPage.xaml
+++ b/NiconicoUI/Onds.Niconico.UI.WinRT.Test/MainPage.xaml
@@ -5,7 +5,7 @@
     xmlns:local="using:Onds.Niconico.UI.WinRT.Test"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:nc="using:Onds.Niconico.UI"
+    xmlns:nc="using:Onds.Niconico.UI.Xaml.Text"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
